crabbing-interpreters/tests/testsuite/snapshots/testsuite__crabbing-interpreters__tests__cases__error_after_multibyte_char.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - crabbing-interpreters/tests/cases/error_after_multibyte_char.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: type error in binary operator `+`: lhs has type `Number`, but rhs has type `String`
   ╭─[crabbing-interpreters/tests/cases/error_after_multibyte_char.lox:1:15]
   │
 1 │ var ünıcödė = 42 + "27";
   │               ─┬ ┬ ──┬─  
   │                │ │   ╰─── this is of type `String`
   │                │ │       
   │                │ ╰─────── the operator in question
   │                │         
   │                ╰───────── this is of type `Number`
   │ 
   │ Help: operator `+` can only be applied to two numbers or two strings
───╯
