crabbing-interpreters/tests/testsuite/snapshots/testsuite__crabbing-interpreters__tests__cases__runtime_error_in_function_argument.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - crabbing-interpreters/tests/cases/runtime_error_in_function_argument.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: type error in binary operator `**`: lhs has type `Nil`, but rhs has type `Number`
   ╭─[crabbing-interpreters/tests/cases/runtime_error_in_function_argument.lox:3:3]
   │
 3 │ f(nil ** 2);
   │   ─┬─ ─┬ ┬  
   │    │   │ ╰── this is of type `Number`
   │    │   │    
   │    │   ╰──── the operator in question
   │    │        
   │    ╰──────── this is of type `Nil`
   │ 
   │ Help: operator `**` can only be applied to numbers
───╯
